# rt-duckdb-coinbase

./: .gitignore  .htaccess  BUILD_SETUP_GUIDE.md  Cargo.toml  DUCKDB_CLEANUP_SUMMARY.md  MIGRATION_GUIDE.md  MODULAR_QUERY_SUMMARY.md  README.md  REAL_DUCKDB_SETUP.md  Trunk.toml  app.js  build-wasm.sh  build.sh  combined-structure.html  compatibility-demo.html  compatibility.js  cors-test.html  d3-fallback.html  d3-test.html  debug.html  fallback.html  fix-github-pages.sh  fixed-index.html  github-pages-index.html  index-redirect.html  index.html  index.original.html  inline-compatibility.html  netlify.toml  new-structure.html  old-structure.html  patch-instructions.md  real-duckdb-implementation.js  simple-test.html  standalone.html  start-nats.sh  start-nex-publisher.sh  start-server-with-nex.sh  start-simple-publisher.sh  start.sh  (+9 more)
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: deploy-pages.yml  pages.yml  wasm-ci.yml
backup/old-duckdb-init/: duckdb-init-cdn-safe.js  duckdb-init-local.js  duckdb-init-old.js  duckdb-init-simple-real.js  duckdb-init-simple.js
css/: dashboard.css
js/: chart-renderer.js  dashboard-controller.js  data-connector-old.js  data-connector.js  data-processor.js  duckdb.js  main.js  query-manager.js
nex-publisher/: Cargo.toml
nex-publisher/src/: main.rs
pkg/: metadata.txt  rt-duckdb-coinbase-2efc77b9fa92161d.js  rt-duckdb-coinbase-2efc77b9fa92161d_bg.wasm  rt_duckdb_coinbase.js  rt_duckdb_coinbase.js.bak  rt_duckdb_coinbase.wasm
proxy/: Cargo.toml  run.sh
proxy/src/: main.rs
queries/: price-data.js  trade-stats.js  volatility-analysis.js  volume-analysis.js
scripts/: download-duckdb.sh
simple-publisher/: Cargo.toml
simple-publisher/src/: main.rs
src/: duckdb_wasm.rs  lib.rs
static/: _headers  duckdb-wasm.js  index.html  observable-plot.min.js
static/duckdb-wasm/: VERSION  bundles.js  duckdb-browser-eh.pthread.worker.js  duckdb-browser.js  duckdb-init-modern.js  duckdb-init-old.js  duckdb-init-real.js  duckdb-init-simple.js  duckdb-init.js  duckdb-real.js
static/wasm/: README.md  metadata.txt  package.json  rt_duckdb_coinbase.d.ts  rt_duckdb_coinbase.js  rt_duckdb_coinbase.wasm  rt_duckdb_coinbase_bg.wasm  rt_duckdb_coinbase_bg.wasm.d.ts
static/wasm/snippets/rt-duckdb-coinbase-5ad6744fea6f1bc7/js/: duckdb.js
static/wasm/snippets/rt-duckdb-coinbase-5ad6744fea6f1bc7/static/: duckdb-wasm.js
tests/: query-tests.html
