[package]
name = "rt-duckdb-coinbase"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["WebSocket", "console", "MessageEvent"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.37"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

