[package]
name = "rt-duckdb-coinbase-server"
version = "0.1.0"
edition = "2021"
description = "Unified server for rt-duckdb-coinbase"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
warp = "0.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.5", features = ["derive"] }
mime_guess = "2.0"