[package]
name = "rt-duckdb-coinbase-server"
version = "0.1.0"
edition = "2021"
description = "Unified server for rt-duckdb-coinbase"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.24"
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.3.0", features = ["derive"] }
mime_guess = "2.0.4"
async-nats = "0.29.0"
url = "2.3.1"